@@ -3,7 +3,7 @@
 #include "utils.h"
 
 START_TEST (test_pointer_valid) {
-    smart int *a = unique_ptr(int);
+    smart int *a = unique_ptr(int, (42));
     assert_valid_ptr(a);
     ck_assert_msg(get_smart_ptr_meta(a) == NULL, "Expected pointer to have no metadata");
 } END_TEST
@@ -11,7 +11,7 @@ START_TEST (test_pointer_valid) {
 START_TEST (test_dtor_run) {
     int dtor_run = 0;
     f_destructor dtor = lambda(void, (void *ptr, void *meta) { dtor_run = 1; });
-    int *a = unique_ptr(int, dtor);
+    int *a = unique_ptr(int, (42), dtor);
     assert_valid_ptr(a);
     ck_assert_msg(get_smart_ptr_meta(a) == NULL, "Expected pointer to have no metadata");
     sfree(a);
@@ -19,7 +19,7 @@ START_TEST (test_dtor_run) {
 } END_TEST
 
 START_TEST (test_meta) {
-    smart int *a = unique_ptr(int, &m, sizeof (m));
+    smart int *a = unique_ptr(int, (42), &m, sizeof (m));
     assert_valid_ptr(a);
     assert_valid_meta(a, &m, get_smart_ptr_meta(a));
 } END_TEST
@@ -28,7 +28,7 @@ START_TEST (test_dtor_run_with_meta) {
     int dtor_run = 0;
 
     f_destructor dtor = lambda(void, (void *ptr, void *meta) { dtor_run = 1; });
-    int *a = unique_ptr(int, dtor, &m, sizeof (m));
+    int *a = unique_ptr(int, (42), dtor, &m, sizeof (m));
     assert_valid_ptr(a);
     assert_valid_meta(a, &m, get_smart_ptr_meta(a));
 
