@@ -4,14 +4,14 @@
 #include "utils.h"
 
 START_TEST (test_shared_init) {
-    smart void *ptr = shared_ptr(int);
+    smart void *ptr = shared_ptr(int, (42));
     assert_valid_ptr(ptr);
 } END_TEST
 
 START_TEST (test_shared_sref) {
     int dtor_run = 0;
     f_destructor dtor = lambda(void, (void *ptr, void *meta) { dtor_run = 1; });
-    smart void *ptr = shared_ptr(int, dtor);
+    smart void *ptr = shared_ptr(int, (42), dtor);
     assert_valid_ptr(ptr);
 
     {
